create third section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="first-section">
             <div class="container">
 
-                <div class="swiper-container photo-slider">
+                <div class="swiper-container1 photo-slider">
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                         <!-- Slides -->
@@ -167,6 +167,74 @@
         </section>
         <!-- /.second-section -->
 
+        <div class="section third-section">
+            <div class="container">
+                <h1 class="games-title">Последние матчи</h1>
+                
+                <!-- Slider main container -->
+                <div class="swiper-container2 games-slider">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide game">
+                            <img src="img/games/game1.png" alt="game 1" class="game-photo">
+                            <p class="game-description">
+                                1:0 Фабрициус 11` <br>
+                                1:1 Назаров 16` (Мастеров) <br>
+                                2:1 Крумм 31` <br>
+                                3:1 Прокоп 40` <br>
+                                🚨 Фолы: 2-2 (1-2) <br>
+                                ⛔ Предупреждение: <br> 
+                                Терманов (Аякс) неспортивное поведение 24` <br>
+                                Пехтерев (Дети Элиты) неспортивное поведение 24` <br>
+                                Шемет (Дети Элиты) неспортивное поведение 24` <br>
+                                Петров (Дети Элиты) неспортивное поведение 24` <br>
+                                Панфилов (Дети Элиты) неспортивное поведение 33` <br>
+                                ✋ Вратари: Прокоп - Шеховцов <br>
+                            </p>
+                        </div>
+                        <!-- slide 1-->
+                        <div class="swiper-slide game">
+                            <img src="img/games/game2.png" alt="game 2" class="game-photo">
+                            <p class="game-description">
+                                1:0 Метелев 3` (Мастеров) <br>
+                                1:1 Ефремов 16` <br>
+                                1:2 Семин 23` <br>
+                                1:3 Ворожцов 27` <br>
+                                1:4 Автогол (Оконешников) 38` <br>
+                                🚨 Фолы: 0-0 (4-1) <br>
+                                ⛔ Предупреждения: <br>
+                                Оконешников (Аякс) грубая игра 7` <br>
+                                Бочков (ВЭЛТА) неспортивное поведение 13` <br>
+                                Терманов (Аякс) неспортивное поведение 30` <br>
+                                ✋ Вратари: Шеховцов - Фатеев <br>
+                            </p>
+                        </div>
+                        <!-- slide 2-->
+                        <div class="swiper-slide game">
+                            <img src="img/games/game3.png" alt="game 3" class="game-photo">
+                            <p class="game-description">0:1 Колпащиков 7` (п) <br>
+                                0:2 Жумаханов 11` <br>
+                                0:3 Исин 21` (Метелёв) <br>
+                                0:4 Назаров 24` (Мастеров) <br>
+                                0:5 Власов 29` (Назаров) <br>
+                                0:6 Терманов 33` (Жумаханов) <br>
+                                1:6 Отрощенко 37` <br>
+                                🚨 Фолы: 5-3 (2-2) <br>
+                                ⛔ Предупреждения: <br>
+                                Григорищенко (Кормиловка) грубая игра 7` <br>
+                                ✋ Вратари: Мендубаев - Шеховцов
+                            </p>
+                        </div>
+                        <!-- slide 3-->
+                    </div>
+                    <div class="games-pagination"></div>
+                </div>
+            
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.section third-section -->
     </main>
 
     <script src="js/swiper-bundle.min.js"></script>
