--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link href="http://fonts.cdnfonts.com/css/post-no-bills-jaffna" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merienda+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
@@ -35,7 +36,7 @@
                         <a href="#" class="navigation-link">Новости</a>
                         <a href="#" class="navigation-link">Сезон</a>
                         <a href="#" class="navigation-link">Галерея</a>
-                        <a href="#" class="navigation-link">Календарь</a>
+                        <a href="#" class="navigation-link">Контакты</a>
                     </nav>
                 </div>
                 <!-- .header-right -->
@@ -167,7 +168,18 @@
         </section>
         <!-- /.second-section -->
 
-        <div class="section third-section">
+        <section class="third-section">
+            <div class="container">
+                <h1 class="table-title">Турнирная таблица МФЛ  “Осень-Зима 2019” Дивизион G </h1>
+                <div class="third-section-content">
+                    <img src="img/games/table.png" alt="tournament table" class="table">
+                </div>
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- third-sectoin -->
+
+        <section class="section fourth-section">
             <div class="container">
                 <h1 class="games-title">Последние матчи</h1>
                 
@@ -233,9 +245,23 @@
             
             </div>
             <!-- /.container -->
-        </div>
-        <!-- /.section third-section -->
-    </main>
+        </section>
+        <!-- fourth-section -->
+     </main>
+
+     <footer>
+        <div class="container">
+            <div class="down">
+                <span class="license">©2019-2020 Футбольный клуб «Аякс», Омск</span>
+                <span class="creators">
+                    Created by Zhaslan Zhumakhanov <br>
+                    and Nikita Khimchenko 
+                </span>
+            </div>
+            <!-- down -->
+        </div> 
+        <!-- /.container -->  
+     </footer>
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
