--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <!-- Slides -->
                         <div class="swiper-slide photo-slide">
                             <div class="photo-slide-left">
-                                <span class="photo-description">МФЛ "Осень-Зима 2020"</span>
+                                <span class="photo-description">МФЛ «Осень-Зима 2020»</span>
                                 <img src="img/team/osen-zima2020.jpg" alt="Осень-Зима" class="photo-team">
                             </div>
                             <!-- /.photo-slide-left -->
@@ -71,7 +71,7 @@
                         <!-- slide 1-->
                         <div class="swiper-slide photo-slide">
                             <div class="photo-slide-left">
-                                <span class="photo-description">МФЛ "Лето 2020"</span>
+                                <span class="photo-description">МФЛ «Лето 2020»</span>
                                 <img src="img/team/summer2020.jpg" alt="Лето 2020" class="photo-team">
                             </div>
                             <!-- /.photo-slide-left -->
@@ -84,7 +84,7 @@
                         <!-- slide 2-->
                         <div class="swiper-slide photo-slide">
                             <div class="photo-slide-left">
-                                <span class="photo-description">МФЛ "Осень-Зима 2019"</span>
+                                <span class="photo-description">МФЛ «Осень-Зима 2019»</span>
                                 <img src="img/team/osen-zima2019.jpg" alt="Осень-Зима 2019" class="photo-team">
                             </div>
                             <!-- /.photo-slide-left -->
@@ -170,7 +170,7 @@
 
         <section class="third-section">
             <div class="container">
-                <h1 class="table-title">Турнирная таблица МФЛ  “Осень-Зима 2019” Дивизион G </h1>
+                <h1 class="table-title">Турнирная таблица МФЛ «Осень-Зима 2019» Дивизион G </h1>
                 <div class="third-section-content">
                     <img src="img/games/table.png" alt="tournament table" class="table">
                 </div>
@@ -188,7 +188,7 @@
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                         <!-- Slides -->
-                        <div class="swiper-slide game">
+                        <div class="swiper-slide game-slide">
                             <img src="img/games/game1.png" alt="game 1" class="game-photo">
                             <p class="game-description">
                                 1:0 Фабрициус 11` <br>
@@ -206,7 +206,7 @@
                             </p>
                         </div>
                         <!-- slide 1-->
-                        <div class="swiper-slide game">
+                        <div class="swiper-slide game-slide">
                             <img src="img/games/game2.png" alt="game 2" class="game-photo">
                             <p class="game-description">
                                 1:0 Метелев 3` (Мастеров) <br>
@@ -223,9 +223,10 @@
                             </p>
                         </div>
                         <!-- slide 2-->
-                        <div class="swiper-slide game">
+                        <div class="swiper-slide game-slide">
                             <img src="img/games/game3.png" alt="game 3" class="game-photo">
-                            <p class="game-description">0:1 Колпащиков 7` (п) <br>
+                            <p class="game-description">
+                                0:1 Колпащиков 7` (п) <br>
                                 0:2 Жумаханов 11` <br>
                                 0:3 Исин 21` (Метелёв) <br>
                                 0:4 Назаров 24` (Мастеров) <br>
@@ -252,7 +253,7 @@
      <footer>
         <div class="container">
             <div class="down">
-                <span class="license">©2019-2020 Футбольный клуб «Аякс», Омск</span>
+                <span class="license">© 2019-2020 Футбольный клуб «Аякс» Омск</span>
                 <span class="creators">
                     Created by Zhaslan Zhumakhanov <br>
                     and Nikita Khimchenko 
