--- a/index.html
+++ b/index.html
@@ -19,29 +19,34 @@
 <body>
     <div class="container">
         <header class="header">
-                <img src="img/team/logo.png" alt="logo" class="logo" />
-                <div class="header-right">
-                    <div class="header-top">
-                        <span class="team-name">FC Ajax Omsk</span>       
-                        <div class="social-links">
-                            <a href="https://www.youtube.com/mfl55" class="social-link"><img src="img/social/youtube.svg" alt="YouTube"></a>
-                            <a href="https://www.instagram.com/ajax_omsk/?hl=ru" class="social-link"><img src="img/social/instagram.svg" alt="Instagram"></a>
-                            <a href="https://vk.com/ajax_omsk" class="social-link"><img src="img/social/vk.svg" alt="VK"></a>
-                        </div>
-                        <!-- .social-links -->
+            <img src="img/team/logo.png" alt="logo" class="logo" />
+            <div class="header-right">
+                <div class="header-top">
+                    <span class="team-name">FC Ajax Omsk</span>       
+                    <div class="social-links">
+                        <a href="https://www.youtube.com/mfl55" class="social-link"><img src="img/social/youtube.svg" alt="YouTube"></a>
+                        <a href="https://www.instagram.com/ajax_omsk" class="social-link"><img src="img/social/instagram.svg" alt="Instagram"></a>
+                        <a href="https://vk.com/ajax_omsk" class="social-link"><img src="img/social/vk.svg" alt="VK"></a>
                     </div>
-                    <!-- .header-top -->
-                    <nav class="navigation">
-                        <a href="#" class="navigation-link">Команда</a>
-                        <a href="#" class="navigation-link">Новости</a>
-                        <a href="#" class="navigation-link">Сезон</a>
-                        <a href="#" class="navigation-link">Галерея</a>
-                        <a href="#" class="navigation-link">Контакты</a>
-                    </nav>
+                    <!-- .social-links -->
                 </div>
-                <!-- .header-right -->
-            
+                <!-- .header-top -->
+                <nav class="navigation">
+                    <a href="#" class="navigation-link">Команда</a>
+                    <a href="#" class="navigation-link">Новости</a>
+                    <a href="#" class="navigation-link">Сезон</a>
+                    <a href="#" class="navigation-link">Галерея</a>
+                    <a href="#" class="navigation-link">Контакты</a>
+                </nav>
+            </div>
+            <!-- .header-right -->
         </header>
+        <header class="mobile-header">
+            <img src="img/team/logo.png" alt="logo" class="logo" />
+            <span class="team-name">FC Ajax Omsk</span> 
+            <img src="img/menu.svg" alt="menu" class="menu">
+        </header>
+        <!-- /.mobile-header -->
     </div>
     <!-- /.container -->
     <div class="line"></div>
@@ -62,10 +67,11 @@
                                 <img src="img/team/osen-zima2020.jpg" alt="Осень-Зима" class="photo-team">
                             </div>
                             <!-- /.photo-slide-left -->
-                            <p class="text-description">ОписаниеОписание
-                                ОписаниеОписание
-                                ОписаниеОписание
-                                ОписаниеОписание
+                            <p class="text-description">
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
                             </p>
                         </div>
                         <!-- slide 1-->
@@ -75,10 +81,11 @@
                                 <img src="img/team/summer2020.jpg" alt="Лето 2020" class="photo-team">
                             </div>
                             <!-- /.photo-slide-left -->
-                            <p class="text-description">ОписаниеОписание
-                                ОписаниеОписание
-                                ОписаниеОписание
-                                ОписаниеОписание
+                            <p class="text-description">
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
                             </p>
                         </div>
                         <!-- slide 2-->
@@ -88,10 +95,11 @@
                                 <img src="img/team/osen-zima2019.jpg" alt="Осень-Зима 2019" class="photo-team">
                             </div>
                             <!-- /.photo-slide-left -->
-                            <p class="text-description">ОписаниеОписание
-                                ОписаниеОписание
-                                ОписаниеОписание
-                                ОписаниеОписание
+                            <p class="text-description">
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
+                                ОписаниеОписание <br>
                             </p>
                         </div>
                         <!-- slide 3-->
@@ -108,8 +116,10 @@
 
         <section class="second-section">
             <div class="container">
+                <div class="second-section-title">
                     <span class="we-team-title">Наша команда</span>
                     <div class="team-line"></div>
+                </div>
                 <div class="players">
                     <div class="player">
                         <img src="img/team/Ivan Shehovtstov.jpg" alt="Иван Шеховцов" class="player-avatar">
@@ -171,9 +181,7 @@
         <section class="third-section">
             <div class="container">
                 <h1 class="table-title">Турнирная таблица МФЛ «Осень-Зима 2019» Дивизион G </h1>
-                <div class="third-section-content">
-                    <img src="img/games/table.png" alt="tournament table" class="table">
-                </div>
+                <img src="img/games/table.png" alt="tournament table" class="table">
             </div>
             <!-- /.container -->
         </section>
@@ -248,18 +256,29 @@
             <!-- /.container -->
         </section>
         <!-- fourth-section -->
+
+        <section class="fifth-section">
+            <div class="vk">
+                <a href="https://vk.com/ajax_omsk" class="vk-text">Наша группа ВКонтакте</a>
+                <a href="https://vk.com/ajax_omsk" class="vk-icon"><img src="img/social/vk.svg" alt="vk"></a>
+            </div>
+            <div class="instagram">
+                <a href="https://www.instagram.com/ajax_omsk" class="instagram-text">Наша аккаунт в Инстаграм</a>
+                <a href="https://www.instagram.com/ajax_omsk" class="instagram-icon"><img src="img/social/instagram.svg" alt="instagram"></a>
+            </div>
+        </section>
+        <!-- /.fifth-section -->
      </main>
 
      <footer>
         <div class="container">
-            <div class="down">
+            <div class="footer">
                 <span class="license">© 2019-2020 Футбольный клуб «Аякс» Омск</span>
                 <span class="creators">
-                    Created by Zhaslan Zhumakhanov <br>
-                    and Nikita Khimchenko 
+                    Created by Zhaslan Zhumakhanov and Nikita Khimchenko 
                 </span>
             </div>
-            <!-- down -->
+            <!-- footer -->
         </div> 
         <!-- /.container -->  
      </footer>
