--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FC Ajax Omsk</title>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
 
 <body>
     <div class="container">
-        <header class="header">
+        <header class="header wow fadeInDown">
             <img src="img/team/logo.png" alt="logo" class="logo" />
             <div class="header-right">
                 <div class="header-top">
@@ -41,7 +42,7 @@
             </div>
             <!-- .header-right -->
         </header>
-        <header class="mobile-header">
+        <header class="mobile-header wow fadeInDown">
             <img src="img/team/logo.png" alt="logo" class="logo" />
             <span class="team-name">FC Ajax Omsk</span> 
             <img src="img/menu.svg" alt="menu" class="menu">
@@ -114,7 +115,7 @@
         </section>
         <!-- /.first-section -->
 
-        <section class="second-section">
+        <section class="second-section wow zoomIn">
             <div class="container">
                 <div class="second-section-title">
                     <span class="we-team-title">Наша команда</span>
@@ -178,7 +179,7 @@
         </section>
         <!-- /.second-section -->
 
-        <section class="third-section">
+        <section class="third-section wow fadeInLeft">
             <div class="container">
                 <h1 class="table-title">Турнирная таблица МФЛ «Осень-Зима 2019» Дивизион G </h1>
                 <img src="img/games/table.png" alt="tournament table" class="table">
@@ -187,7 +188,7 @@
         </section>
         <!-- third-sectoin -->
 
-        <section class="section fourth-section">
+        <section class="section fourth-section wow fadeInRight">
             <div class="container">
                 <h1 class="games-title">Последние матчи</h1>
                 
@@ -283,9 +284,9 @@
         <!-- /.container -->  
      </footer>
 
+    <script src="js/wow.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
-
 
 </body>
 </html>
